--- a/studyCafe/src/main/webapp/resources/assets/css/main/main.css
+++ b/studyCafe/src/main/webapp/resources/assets/css/main/main.css
@@ -5,24 +5,29 @@ html, body{
    }
    .header_wrap{
       height: 150px;
-      background-color: #d1d5ea;
+      background-color: #F6F4E8;
    }
    .inline_section{
       width: 1200px;
       height: 100%;
       margin: 0 auto;
-      text-align: center;
+   }
+   .header_top {
    }
    .inline_section_left{
+   	  float: left;
       box-sizing: border-box;
       display: inline-block;
       padding: 0 10px;
       width: 49.7%;
       height: 72px;
       line-height: 72px;
-      border: 1px solid black;
+      font-size: 30px;
+      font-family: cursive;
+      color: #E59560;
    }
    .inline_section_right{
+   	  float: right;
       box-sizing: border-box;
       display: inline-block;
       padding: 0 10px;
@@ -30,14 +35,13 @@ html, body{
       height: 72px;
       line-height: 72px;
       text-align: right;
-      border: 1px solid black;
    }
    .naviVar{
-        margin-top: 5px;
+      margin-top: 5px;
       height: 70px;
       line-height: 70px;
-      border: 1px solid black;
-      text-align: left;
+      text-align: center;
+      font-weight: bold;
    }
    a{
       text-decoration: none;
@@ -56,13 +60,12 @@ html, body{
       width: 1200px;
       height: 350px;
       text-align: center;
-      border: 1px solid black;
+      background-color: #BACEC1;
    }
    .banner_image{
       display: inline-block;
       float: left;
       height: 350px;
-      border: 1px solid black;
    }
    .btn1{
       display: inline-block;
@@ -73,7 +76,8 @@ html, body{
       height: 50px;
       line-height: 50px;
       border: 1px solid black;
-      border-radius: 15px;
+      border-radius: 40px;
+      background-color: #1D3124;
    }
    .summary{
       margin: 10px auto;
@@ -82,7 +86,7 @@ html, body{
       border-bottom: 1px solid #ccc;
    }
    .footer{
-      background: #d1d5ea;
+      background-color: #F6F4E8;
       height: 220px;
    }
    .footer_section{
@@ -99,7 +103,7 @@ html, body{
       height: 45px;
       line-height: 45px;
       text-align: center;
-      border: 1px solid white;
+      border: 1px solid #999;
    }
    .area_info{
       margin-top: 10px;
