--- a/studyCafe/src/main/webapp/resources/assets/css/food/food_main.css
+++ b/studyCafe/src/main/webapp/resources/assets/css/food/food_main.css
@@ -5,7 +5,7 @@
 
 .filterDiv {
   float: left;
-  width: 270px;
+  width: 287px; 
   text-align: center;
   margin: 5px 5px;
   display: none; /* Hidden by default */
@@ -34,8 +34,15 @@ div.filterDiv:hover {
   border: none;
   outline: none;
   padding: 12px 16px;
-  background-color: #f1f1f1;
+  background-color: #aaa;
   cursor: pointer;
+  width : 130px;
+  height : 50px;
+  margin-right: 10px;
+  margin-left: 10px;
+  margin-bottom: 5px;
+  border-radius: 15px;
+  color : white;
 }
 
 /* Add a light grey background on mouse-over */
@@ -45,6 +52,9 @@ div.filterDiv:hover {
 
 /* Add a dark background to the active button */
 .btn.active {
-  background-color: #666;
-  color: white;
+  background-color: #FFE08C;
+  color: black;
+}
+#myBtnContainer{
+	text-align: center;
 }
